LocalDateTimeへの変更に伴いテストコードを修正